Updates from Overleaf

--- a/Oil Model/_main.tex
+++ b/Oil Model/_main.tex
@@ -110,7 +110,7 @@ C.~Hutters and M.~Mendel are with the Delft Center for Systems and Control, Delf
 \input{sections/Simulation}
 \input{sections/Conclusions}
 
-\bibliography{reference}
+\bibliography{library}
 \bibliographystyle{ieeetr}
 
 \newpage
