repaired bond graph

--- a/Oil Model/sections/Introduction.tex
+++ b/Oil Model/sections/Introduction.tex
@@ -20,7 +20,7 @@ In particular, we use the bond graph modelling method to derive a first-principl
 
 
 
-Bond graphs are graphical tools used to model dynamical systems \cite{}.
+Bond graphs are graphical tools used to model dynamical systems \cite{Karnopp2012}.
 The bond graph method was introduced by Henry Paynter who noted that the dynamics of engineering systems from different domains, e.g. electrical, mechanical, or hydraulic engineering, were described by differential equations of the same form.
 In a bond graph, elements are interconnected by power bonds that represent the time rate of energy flow between the elements as the product of \textit{flow} and \textit{effort} variables.
 Furthermore, each power bond indicates the causality at each element port, i.e. whether an element is driven by a {flow} variable, or its dual {effort} variable. 
