--- a/Oil Model/sections/Methodology.tex
+++ b/Oil Model/sections/Methodology.tex
@@ -1,11 +1,11 @@
-\section{Oil-Market Dynamics}
+\section{Bond Graph representation of oil-market dynamics}
 \label{sec: EconEng}
 
-\subsection{What drives crude oil prices}
+\subsection{crude oil price drivers}
 The oil-economic literature identifies multiple factors that affect the price of crude oil.
 The US Energy Information Administration (EIA) captures the four most important factors in a simple model, shown in Figure \ref{fig:EIAmodel}.
 The four factors consist of supply, demand, inventory balance, and the financial markets.
-An extensive analysis of the EIA model supported by a literature review is provided in \cite{LANG2020100914}.
+An extensive analysis of the EIA model supported by a literature review is provided in \cite{Lang2020}.
 In this section, we discuss how the four factors can be modeled with dynamical systems theory resulting in a dynamical systems model for oil prices.
 
 
